--- a/SimpleFeedReader/Pages/Index.cshtml
+++ b/SimpleFeedReader/Pages/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Home page";
 }
-<h2>Ultra Amazing Simple Feed Reader - V5</h2>
+<h2><strong>S</strong>A Simple Feed Reader - V6</h2>
 <hr />
 <div class="row">
     <div>
